# stealth-id

./: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
anchor/: Anchor.toml
anchor/programs/stealthid/: Cargo.toml
anchor/programs/stealthid/src/: lib.rs
anchor/tests/: stealthid.ts
app/: globals.css  layout.tsx  page.tsx
app/airdrop/: page.tsx
app/api/per/claim-airdrop/: route.ts
app/api/per/deposit/: route.ts
app/api/per/generate-proof/: route.ts
app/api/per/health/: route.ts
app/api/per/initialize-mint/: route.ts
app/api/per/private-balance/: route.ts
app/api/per/public-balance/: route.ts
app/api/per/transfer/: route.ts
app/api/per/verify-proof/: route.ts
app/api/per/withdraw/: route.ts
app/api/proof/generate/: route.ts
app/api/proof/verify/[id]/: route.ts
app/api/sol/deposit/: route.ts
app/api/sol/server-info/: route.ts
app/api/sol/transfer/: route.ts
app/api/sol/withdraw/: route.ts
app/dashboard/: page.tsx
app/generate/: page.tsx
app/verify/[id]/: page.tsx
app/wallet/: page.tsx
components/: CopyButton.tsx  NavBar.tsx  PerStatus.tsx  ProofCard.tsx  Toast.tsx  TxResult.tsx  WalletProvider.tsx
lib/: magicblock.ts  per.ts  proofEngine.ts  solana-tx.ts  store.ts
