[package]
name = "stealthid"
version = "0.1.0"
description = "StealthID – Private Web3 Identity Layer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stealthid"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
